--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-import": "2.29.1",
     "jest": "29.7.0",
     "prettier": "3.2.5",
-    "supertest": "6.3.3",
+    "supertest": "^6.3.4",
     "ts-jest": "29.1.2",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
